# drf-auth

./: README.md  pyproject.toml
authetication/: db.sqlite3  docker-compose.yml  requirements.txt
authetication/auth1/: admin.py  models.py  serilaizers.py  urls.py  views.py
authetication/auth1/migrations/: 0001_initial.py
authetication/authetication/: asgi.py  settings.py  urls.py  wsgi.py
